<?xml version="1.0" encoding="utf-8"?>
<!DOCTYPE resources [
<!ENTITY bull "•">
]>

<resources>
    <string name="app_name">Battery Tile</string>
    <string name="fully_charged">100% • Charged</string>
    <string name="charging_no_time_estimate">Charging • %1$d%%</string>
    <string name="charging_more_than_one_hour_left">%1$d%% • %2$dh %3$dm until full</string>
    <string name="charging_less_than_one_hour_left">%1$d%% • %2$dm until full</string>
    <string name="preferences_bottom_sheet_title">Settings</string>
    <string name="emulate_power_save_tile_preference_title">Act as Battery Saver tile</string>
    <string name="emulate_power_save_tile_preference_description">The tile will only display the state of Battery Saver when this is on.</string>
    <string name="enable_tap_action_preference_title">Tap to toggle Battery Saver</string>
    <string name="enable_tap_action_preference_description">Toggle Battery Saver by tapping on the tile</string>
    <string name="requires_adb_dialog_title">Hold up!</string>
    <string name="requires_adb_dialog_description">To enable this, you\'ll need to grant the app permission to do modify system settings. To do that, connect your phone to your computer with USB debugging enabled, and issue the following command via ADB:</string>
    <string name="requires_adb_dialog_description_second_half">Once you\'ve done that, you\'ll be able to enable this setting.</string>
    <string name="battery_tile_label">Battery</string>
    <string name="power_save_tile_label">Battery Saver</string>
    <string name="power_saver_tile_on_subtitle">On</string>
    <string name="power_saver_tile_off_subtitle">Off</string>
    <string name="power_save_tile_unavailable_subtitle">Unavailable</string>
    <string name="power_save_tile_warning_title">Hold up! This is important.</string>
    <string name="power_save_system_warning_description">Android doesn\'t natively support apps changing the state of Battery Saver, and as such, this feature is experimental as of now.\n\nThe workaround the app uses can cause the Android System to no longer be able to control the Battery Saver setting after tapping the tile, meaning that things like the system Battery Saver tile won\'t work.\n\nIf you encounter this, tapping this tile (the tile from this app) again to restore the Battery Saver setting to its previous state should fix it.</string>
    <string name="info_in_title_option_description">Turn this on if you only see \"Battery\" after adding the tile.</string>
    <string name="info_in_title_option_title">Show battery info in tile title</string>
    <string name="dialog_customize_tile_title">Customise tile</string>
    <string name="tile_state_always_on">Always on</string>
    <string name="tile_state_on_when_charging">On when charging</string>
    <string name="tile_state_always_off">Always off</string>
    <string name="dialog_customize_tile_state_title">Tile state</string>
    <string name="bottom_sheet_tile_text_disambiguation_discharging_text_title">Discharging text</string>
    <string name="bottom_sheet_tile_text_disambiguation_discharging_text_description">Set the text shown when your phone isn\'t charging</string>
    <string name="bottom_sheet_tile_text_disambiguation_charging_text_title">Charging text</string>
    <string name="bottom_sheet_tile_text_disambiguation_charging_text_description">Set the text shown when your phone is charging</string>
    <string name="bottom_sheet_preferences_customize_title_title">Customise tile</string>
    <string name="bottom_sheet_preferences_customize_title_description">Customise how the tile looks and behaves</string>
    <string name="bottom_sheet_preferences_tile_text_title">Tile text</string>
    <string name="bottom_sheet_preferences_tile_text_description">Customise the text shown on the tile</string>
    <string name="bottom_sheet_preferences_tile_state_disabled_reason">Unavailable with the settings you have enabled</string>
    <string name="dialog_tile_state_picker_title">When should the tile be on?</string>
    <string name="dialog_tile_state_picker_always_on">Always</string>
    <string name="dialog_tile_state_picker_on_when_charging">When charging</string>
    <string name="dialog_tile_state_picker_always_off">Never</string>
    <string name="dialog_tile_text_disambiguation_title">What text should be changed?</string>
    <string name="activity_edit_tile_text_title">Edit tile text</string>
    <string name="activity_edit_tile_text_text_input_hint">Tile text</string>
    <string name="activity_edit_discharging_tile_text_info_text">Customise the text displayed on the tile. The following placeholders can be used to display information regarding the battery on the tile:\n\n• %%c: Current of the battery in milliamperes\n• %%a: Average current of the battery in milliamperes\n• %%t: Temperature of the battery in Celsius\n• %%f: Temperature of the battery in Fahrenheit\n• %%v: Voltage of the battery\n• %%w: Wattage of the battery\n• %%l: Current battery percentage\n\nSo, for example, setting the text to \"Battery: %%l%%\" would result in the tile displaying \"Battery: 69%%\".\n\nLeaving this field blank will result in the tile displaying %1$s</string>
    <string name="activity_edit_charging_tile_text_info_text">Customise the text displayed on the tile. The following placeholders can be used to display information regarding the battery on the tile:\n\n• %%c: Current of the battery in milliamperes\n• %%a: Average current of the battery in milliamperes\n• %%t: Temperature of the battery in Celsius\n• %%f: Temperature of the battery in Fahrenheit\n• %%v: Voltage of the battery\n• %%w: Wattage of the battery\n• %%l: Current battery percentage\n• %%h: Hours until battery is charged\n• %%m: Minutes until battery is charged\n\nSo, for example, setting the text to \"Battery: %%l%%\" would result in the tile displaying \"Battery: 69%%\".\n\nLeaving this field blank will result in the tile displaying %1$s</string>
    <string name="activity_edit_tile_text_info_text_default_charging">the battery percentage and a charge time estimate.</string>
    <string name="activity_edit_tile_text_info_text_default_discharging">the battery percentage.</string>
    <string name="activity_edit_tile_text_save_success">Text saved!</string>
    <string name="activity_edit_text_discard_dialog_title">Discard changes?</string>
    <string name="activity_edit_text_discard_dialog_description">You have unsaved changes. Are you sure you want to discard them?</string>
    <string name="activity_edit_text_discard_dialog_negative_button">Discard</string>
    <string name="activity_edit_text_discard_dialog_positive_button">Keep editing</string>
    <string name="menu_edit_title_save_button">Save</string>
    <string name="bottom_sheet_preferences_dynamic_tile_icon_title">Dynamic tile icon</string>
    <string name="bottom_sheet_preferences_dynamic_tile_icon_description">Display the power source as the tile icon when charging</string>
    <string name="bottom_sheet_preferences_percentage_as_tile_icon_title">Battery percentage as tile icon</string>
    <string name="bottom_sheet_preferences_percentage_as_tile_icon_description">Display the current battery percentage as the tile icon</string>
    <string name="requires_adb_dialog_copy_success">ADB command copied!</string>
    <string name="requires_adb_dialog_copy_button">Copy ADB command</string>
    <!-- These are certainly translatable, I just don't have the means to translate them -->
    <string name="live_tile_updates_title" translatable="false">Live tile updates</string>
    <string name="live_tile_updates_description" translatable="false">Update the tile\'s text every two seconds, as opposed to only when the battery\'s level or state changes.</string>
    <string name="debug_dialog_title">"Collecting Debug Info"</string>
    <string name="debug_dialog_initial_description">This won\'t take very long.</string>
    <string name="debug_dialog_collecting_info_description">Collecting battery info… (pass %1$d)</string>
    <string name="debug_dialog_connect_to_power_description">Please connect your device to power to continue.</string>
    <string name="debug_dialog_disconnect_from_power_description">Please disconnect your device from power to continue.</string>
    <string name="debug_dialog_failed_to_save_report_toast">Failed to save report</string>
</resources>
