<?xml version="1.0" encoding="utf-8"?>
<!-- nested scroll view to allow scrolling in bottom sheet -->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="?attr/colorSurfaceContainer">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        app:layout_behavior="@string/bottom_sheet_behavior">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/app_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/gs_flex"
            android:textAllCaps="true"
            android:textSize="11sp"
            android:letterSpacing="0.2"
            android:layout_marginStart="8dp"
            android:id="@+id/bottom_sheet_preferences_accent_title"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/gs_flex_medium"
            android:typeface="normal"
            app:layout_constraintTop_toBottomOf="@id/bottom_sheet_preferences_accent_title"
            app:layout_constraintStart_toStartOf="@id/bottom_sheet_preferences_accent_title"
            android:text="@string/preferences_bottom_sheet_title"
            android:textSize="28sp"
            android:layout_marginTop="-2dp"
            android:id="@+id/preferences_bottom_sheet_title"
            android:textColor="?android:textColorPrimary" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/preferences_bottom_sheet_title"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingVertical="14dp"
            android:layout_marginTop="18dp"
            android:clickable="true"
            android:background="@drawable/list_item_background_top"
            android:id="@+id/info_in_title_preference_layout">

            <TextView
                android:id="@+id/info_in_title_preference_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/info_in_title_option_title"
                android:textColor="?android:textColorPrimary"
                android:fontFamily="@font/gs_flex_medium"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/info_in_title_preference_description"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintEnd_toStartOf="@+id/info_in_title_switch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/info_in_title_preference_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:fontFamily="@font/gs_flex"
                android:text="@string/info_in_title_option_description"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/info_in_title_preference_title"
                app:layout_constraintStart_toStartOf="@id/info_in_title_preference_title"
                app:layout_constraintTop_toBottomOf="@id/info_in_title_preference_title" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/info_in_title_switch"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/percentage_as_tile_icon_layout"
            android:paddingVertical="14dp"
            android:layout_marginTop="2dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/list_item_background_middle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/info_in_title_preference_layout"
            app:layout_constraintBottom_toTopOf="@id/dynamic_tile_icon_layout">

            <TextView
                android:id="@+id/percentage_as_tile_icon_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/bottom_sheet_preferences_percentage_as_tile_icon_title"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                android:fontFamily="@font/gs_flex_medium"
                app:layout_constraintBottom_toTopOf="@+id/percentage_as_tile_icon_description"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintEnd_toStartOf="@+id/percentage_as_tile_icon_switch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/percentage_as_tile_icon_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gs_flex"
                android:text="@string/bottom_sheet_preferences_percentage_as_tile_icon_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/percentage_as_tile_icon_title"
                app:layout_constraintStart_toStartOf="@+id/percentage_as_tile_icon_title"
                app:layout_constraintTop_toBottomOf="@id/percentage_as_tile_icon_title" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/percentage_as_tile_icon_switch"
                android:layout_marginEnd="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="14dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="2dp"
            android:background="@drawable/list_item_background_middle"
            android:id="@+id/dynamic_tile_icon_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/percentage_as_tile_icon_layout">

            <TextView
                android:id="@+id/dynamic_tile_icon_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:text="@string/bottom_sheet_preferences_dynamic_tile_icon_title"
                android:textColor="?android:textColorPrimary"
                android:fontFamily="@font/gs_flex_medium"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/dynamic_tile_icon_description"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintEnd_toStartOf="@+id/dynamic_tile_icon_switch"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/dynamic_tile_icon_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gs_flex"
                android:text="@string/bottom_sheet_preferences_dynamic_tile_icon_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/dynamic_tile_icon_title"
                app:layout_constraintStart_toStartOf="@+id/dynamic_tile_icon_title"
                app:layout_constraintTop_toBottomOf="@id/dynamic_tile_icon_title" />

            <com.google.android.material.materialswitch.MaterialSwitch
                android:id="@+id/dynamic_tile_icon_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tile_state_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:background="@drawable/list_item_background_middle"
            android:clickable="true"
            android:focusable="true"
            android:paddingVertical="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dynamic_tile_icon_layout">

            <TextView
                android:id="@+id/tile_state_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="24dp"
                android:fontFamily="@font/gs_flex_medium"
                android:text="@string/dialog_customize_tile_state_title"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/tile_state_description"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tile_state_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/gs_flex"
                android:text="@string/tile_state_always_on"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tile_state_title"
                app:layout_constraintStart_toStartOf="@+id/tile_state_title"
                app:layout_constraintTop_toBottomOf="@id/tile_state_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/tile_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/list_item_background_bottom"
            android:clickable="true"
            android:focusable="true"
            android:paddingVertical="14dp"
            android:layout_marginTop="2dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tile_state_layout">

            <TextView
                android:id="@+id/tile_text_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="24dp"
                android:text="@string/bottom_sheet_preferences_tile_text_title"
                android:textColor="?android:textColorPrimary"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/tile_text_description"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintEnd_toEndOf="parent"
                android:fontFamily="@font/gs_flex_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tile_text_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/bottom_sheet_preferences_tile_text_description"
                android:fontFamily="@font/gs_flex"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tile_text_title"
                app:layout_constraintStart_toStartOf="@+id/tile_text_title"
                app:layout_constraintTop_toBottomOf="@id/tile_text_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>
