<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="24dp"
    android:paddingBottom="18dp"
    android:paddingTop="24dp">

    <ImageView
        android:layout_width="36dp"
        android:layout_height="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:importantForAccessibility="no"
        android:id="@+id/tile_text_disambiguation_dialog_header_icon"
        android:src="@drawable/edit_text" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tile_text_disambiguation_dialog_header_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/dialog_tile_text_disambiguation_title"
        android:id="@+id/tile_text_disambiguation_dialog_title"
        android:textSize="24sp"
        android:gravity="center"
        android:layout_marginTop="4dp"
        android:textColor="?attr/colorOnSurface"
        android:fontFamily="@font/gs_flex"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tile_text_disambiguation_dialog_title"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/gs_flex_medium"
        style="@style/Widget.Material3.Button"
        android:id="@+id/tile_text_disambiguation_dialog_charging_text_button"
        android:text="@string/bottom_sheet_tile_text_disambiguation_charging_text_title" />

    <Button
        android:id="@+id/tile_text_disambiguation_dialog_discharging_text_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/gs_flex_medium"
        style="@style/Widget.Material3.Button"
        android:text="@string/bottom_sheet_tile_text_disambiguation_discharging_text_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tile_text_disambiguation_dialog_charging_text_button" />

    <Button
        android:id="@+id/tile_text_disambiguation_dialog_cancel_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/gs_flex_medium"
        android:text="@android:string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.Material3.Button.OutlinedButton"
        app:layout_constraintTop_toBottomOf="@id/tile_text_disambiguation_dialog_discharging_text_button" />





</androidx.constraintlayout.widget.ConstraintLayout>